# amphimixis

./: .gitignore  .pylintrc  1_1  1_2  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  amixis.py  amphimixis_cli.py  eslint.config.mjs  input.yml  main.py  package.json  pyproject.toml  pytest.ini  tatus  tsconfig.json
.github/workflows/: ci.yml  docs-pages.yml  pylint.yml
amph/: __init__.py
amph/analyzer/: analyzer.py
amph/builder/: builder.py
amph/configurator/: configurator.py
amph/profiler/: profiler.py
amph/shell/: shell.py  ssh_shell_handler.py
amphimixis/: __init__.py  analyzer.py  analyzer_agent.py  builder.py  configurator.py  laboratory_assistant.py  logger.py  perf_analyzer.py  profiler.py  toolchain_manager.py  tools.py  validator.py
amphimixis/amixis/: __init__.py  __main__.py  cli.py  console_animation_printer.py  parser.py  templates.py  utils.py
amphimixis/amixis/commands/: __init__.py  analyze.py  build.py  clean.py  compare.py  init.py  profile.py  run.py  status.py  validate.py
amphimixis/amixis/commands/add/: __init__.py  input.py  toolchain.py
amphimixis/analyzer/: __init__.py
amphimixis/build_systems/: __init__.py  autoconf.py  bazel.py  bison.py  build_systems.py  cmake.py  gmake.py  make.py  meson.py  ninja.py  yacc.py
amphimixis/builder/: __init__.py  builder.py
amphimixis/cli/: __init__.py  commands.py  console_animation_printer.py  console_spinner.py  parser.py  print_animation_to_console.py  progress_tracker.py  templates.py  utils.py
amphimixis/cli/commands/: __init__.py  analyze.py  build.py  clean.py  compare.py  init.py  profile.py  run.py  validate.py
amphimixis/cli/commands/add/: __init__.py  input.py  toolchain.py
amphimixis/configurator/: configurator.py
amphimixis/core/: __init__.py  analyzer.py  builder.py  configurator.py  laboratory_assistant.py  logger.py  perf_analyzer.py  profiler.py  qemu_machine.py  validator.py
amphimixis/core/build_systems/: __init__.py  build_systems.py  cmake.py  make.py  ninja.py
amphimixis/core/general/: __init__.py  constants.py  general.py  tools.py
amphimixis/core/shell/: __init__.py  local_shell_handler.py  paramiko_shell_handler.py  shell.py  shell_interface.py
amphimixis/general/: __init__.py  colors.py  constants.py  general.py  tools.py
amphimixis/general/build_systems/: __init__.py  build_systems.py  cmake.py  make.py
amphimixis/profiler/: __init__.py  profiler.py
amphimixis/samples/: distributed-cross.yml  distributed.yml  local.yml  qemu.yml
amphimixis/shell/: __init__.py  local_shell_handler.py  paramiko_shell_handler.py  shell.py  shell_interface.py  ssh_shell_handler.py
ci/: black.sh  environment_configure.sh  mdl.sh  mypy.sh  pylint.sh  pytest.sh  ruff.sh  run_tests.sh  runner.sh
docker_images/: dockerfile.client  dockerfile.server
docs/: config_example.md  config_instruction.md  input.yml  installation.md  migration-readiness-exploring-methodology.md  quick_start.md  troubleshooting.md  usage_guide.md
docs/methodologies/: migration-readiness-exploring-methodology.md
docs/sphinx/: Makefile  conf.py  config_instruction.md  index.rst  input.yml  usage_guide.md
docs/sphinx/_templates/: page.html
docs/sphinx/api/: amixis.rst  analyzer.rst  builder.rst  configurator.rst  core_types.rst  index.rst  misc.rst  profiler.rst
opencode/: amphimixis.md  install.sh
opencode/__tests__/: analyzing_test.ts  configuring_test.ts  validating_test.ts
opencode/agents/: amphimixis.configurator.md  amphimixis.md
opencode/tools/: amphimixis.analyze.ts  amphimixis.build.ts  amphimixis.configure.ts  amphimixis.playbook.ts  amphimixis.profile.ts  amphimixis.validate.ts  read-md-docs.py  read-md-docs.ts
samples/: distributed-cross.yml  distributed.yml
src/: main.py  nonam
src/ToolchainManager/: __init__.py  toolchain_manager.py
src/analyzer/: __init__.py  analyzer.py
src/builder/: builder.py  test_builder.py
src/configurator/: __init__.py  configurator.py
src/general/: ToolchainManager.py  __init__.py  architecture.py  build_system_cmake.py  build_system_interface.py  build_system_make.py  build_systems_impl.py  class_ToolchainManager.py  definitions.py  general.py  machine.py
src/general/build_systems/: cmake.py  make.py
src/general/shell/: shell.py  ssh_shell_handler.py
src/logger/: __init__.py  logger.py
src/non_amphimixis/: __init__.py  non_amphimixis.py
src/profiler/: __init__.py  constants.py  profiler.py
src/shell/: local_shell_handler.py  shell.py  shell_interface.py  ssh_shell_handler.py
tests/: LA_adding_test.py  LA_parsing_test.py  TM_adding_test.py  TM_finding_test.py  TM_parsing_test.py  build_systems_test.py  builder_and_build_systems_test.py  configurator_test.py  conftest.py  laboratory_assistant_adding_test.py  laboratory_assistant_finding_test.py  laboratory_assistant_parsing_test.py  laboratory_assistant_test.py  profiler_test.py  shell_test.py
tests/integration/: conftest.py  docker-compose.test.yml  input_configurator_test.yaml  input_local.yaml  input_remote.yaml  test_e2e.py  test_e2e_docker.py  test_e2e_local.py  test_e2e_riscv_vm.py  test_integrates.py
tests/test_ToolchainManager/: __init__.py  test_add_compiler_and_sysroot.py  test_add_toolchain_and_sysroot.py  test_parsing_config_file.py
tests/test_builder/: test_cmake_class.py
tests/test_toolchain_manager/: __init__.py  test_add_toolchain_and_sysroot.py  test_parsing_config_file.py
third_party_licenses/: paramiko.LICENSE
