[project]
name = "amphimixis"
version = "0.2.0"
description = "Build automation and profiling tool for Linux projects across various architectures."
readme = "README.md"
license-files = ["LICENSE", "third_party_licenses/*.LICENSE"]
authors = [
    { name = "Egor Bzychkin", email = "bzychkin.egor@gmail.com" },
    { name = "Dmitrii Bordukov", email = "dabordukov@mail.ru" },
    { name = "Valeria Churikova", email = "curikovalera3@gmail.com" },
    { name = "Michael Mishin", email = "mishamishin17@gmail.com" },
    { name = "Julia Adodina", email = "juliaadod@gmail.com" },
    { name = "Maria Novik", email = "novikmaria36@gmail.com" },
]
requires-python = ">=3.12"

dependencies = [
    "pandas",
    "pyyaml",
    "paramiko",
    "openai",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["amphimixis*"]

[tool.setuptools.package-data]
"amphimixis" = ["samples/*.yml"]

[dependency-groups]
dev = [
    "pytest-mock",
    "docker",
    "testcontainers",
    "pytest",
    "sphinx",
    "furo",
    "myst-parser",
    "ruff",
    "black",
    "mypy",
    "pylint",
    "types-paramiko",
    "types-pyyaml",
    "types-docker",
]

[tool.uv]
package = true

[tool.mypy]
disable_error_code = ["import-untyped", "annotation-unchecked"]

[tool.isort]
profile = "black"

[project.scripts]
amixis = "amphimixis.amixis.__main__:main"
