[project]
name = "amphimixis"
version = "0.2.0"
description = "Build automation and profiling tool for Linux projects across various architectures."
readme = "README.md"
license-files = ["LICENSE", "third_party_licenses/*.LICENSE"]
authors = [
    { name = "Egor Bzychkin", email = "bzychkin.egor@gmail.com" },
    { name = "Dmitrii Bordukov", email = "dabordukov@mail.ru" },
    { name = "Valeria Churikova", email = "curikovalera3@gmail.com" },
    { name = "Michael Mishin", email = "mishamishin17@gmail.com" },
    { name = "Julia Adodina", email = "juliaadod@gmail.com" },
    { name = "Maria Novik", email = "novikmaria36@gmail.com" },
]
requires-python = ">=3.12"

dependencies = [
    "pandas",
    "pyyaml",
    "paramiko",
    "openai",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["amphimixis*"]

[tool.setuptools.package-data]
"amphimixis" = ["samples/*.yml"]

[dependency-groups]
dev = [
    "pytest-mock",
    "docker",
    "testcontainers",
    "pytest",
    "sphinx",
    "sphinx-sitemap",
    "furo",
    "myst-parser",
    "ruff",
    "black",
    "mypy",
    "pylint",
    "types-paramiko",
    "types-pyyaml",
    "types-docker",
]

[tool.uv]
package = true

[tool.mypy]
disable_error_code = ["import-untyped", "annotation-unchecked"]

[tool.isort]
profile = "black"

[tool.pylint.main]
ignore-paths = ["tests", "docs"]

[tool.pylint.messages_control]
disable = [
    "too-many-instance-attributes",
    "too-many-positional-arguments",
    "too-many-return-statements",
    "too-few-public-methods",
    "too-many-locals",
]

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[project.scripts]
amixis = "amphimixis.amixis.__main__:main"

[tool.ruff.lint]
ignore = [
    "E501",   # Ignore line length warnings
    "SIM102", # Ignore "Use a single `if` instead of nested"
    "D107",   # Ignore missing docstring in __init__()
    "D203",   # Ignore 1 blank line required before class docstring
    "D213",   # Ignore Multi-line docstring summary should start at the second line
]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "SIM", # simplify code
    "C4",  # comprehensions
    "B",   # bugbear
    "D",   # docstring (PEP 257)
]

[tool.ruff]
exclude = ["tests"]


